# book

./: .gitignore  README.md  build.sh  genindex.html  intro.html  pyproject.toml  schedule.md  search.html
.github/workflows/: deploy.yml  deploy.yml.renamed
DAML_book/: _config.yml  _toc.yml  intro.md
DAML_book/_build/.doctrees/: environment.pickle  intro.doctree
DAML_book/_build/html/: .buildinfo  searchindex.js
DAML_book/chapter_2/: chapter2.ipynb
DAML_book/chapter_2/questions/: q1.json  q2.json  q3.json  q4.json  q5.Json  q6.json  q7.json
DAML_book/chapter_3/: chapter3.ipynb
DAML_book/chapter_3/questions/: q1.json  q2.json  q3.json
DAML_book/chapter_4/: chapter4.ipynb
DAML_book/chapter_5/: chapter5.ipynb
DAML_book/chapter_5/questions/: q1.json
DAML_book/chapter_6/: chapter6.ipynb
DAML_book/chapter_7/: chapter7.ipynb
chapter_2/: chapter2.html
docs/: genindex.html  intro.html  objects.inv  search.html  searchindex.js
docs/_sources/: intro.md
docs/_sources/chapter_1/: chapter1.md
docs/_sources/chapter_2/: chapter2.ipynb
docs/_sources/chapter_3/: chapter3.ipynb
docs/_sources/chapter_4/: chapter4.ipynb
docs/_sources/chapter_5/: chapter5.ipynb
docs/book/: genindex.html  intro.html  search.html  searchindex.js
docs/chapter_1/: chapter1.html
docs/chapter_2/: chapter2.html
docs/chapter_3/: chapter3.html
docs/chapter_4/: chapter4.html
docs/chapter_5/: chapter5.html
docs/chapter_6/: chapter6.html
docs/chapter_7/: chapter7.html
docs/conclusion/: conclusion.html
docs/introduction/: introduction.html
(+9 files in other folders)
